[package]
name = "leetrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
rand = "0.8.5"

[[bench]]
name = "k_smallest_pairs_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
